--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=library
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:tcp://localhost:9092/./library
-spring.datasource.username=sa
-spring.datasource.password=123456
+spring.datasource.url=jdbc:h2:tcp://localhost:9092/./demo
+spring.datasource.username=
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=validate
