Add ApiResponse class and helper for the common exceptions

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.url=jdbc:h2:tcp://localhost:9092/./demo
 spring.datasource.username=
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=validate
+logging.level.root=ERROR
+logging.level.com.example=DEBUG
