Front-end access modification

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=validate
 logging.level.root=ERROR
 logging.level.com.example=DEBUG
+spring.jackson.mapper.accept-case-insensitive-enums=true
