--- a/.gitignore
+++ b/.gitignore
@@ -18,8 +18,7 @@ target/
 *.iws
 *.iml
 *.ipr
-application.properties
-application.yml
+/src/main/resources/application.properties
 
 ### NetBeans ###
 /nbproject/private/
